--- a/app.json
+++ b/app.json
@@ -1,15 +1,15 @@
 {
     "name": "VC Video Player",
-    "description": "A VCVideoPlayer Bot for Telegram made with 💞 By @ProErrorXD",
+    "description": "A VCVideoPlayer Bot for Telegram made with 💞 By @ProHere",
     "logo": "https://telegra.ph/file/e1be1a6fcb7f0e37c297f.jpg",
     "keywords": [
         "pytgcalls",
         "Telegram Bot",
         "Vidio Vc Steramer"
     ],
-    "website": "https://t.me/DeeCodeBots",
-    "repository": "https://github.com/Sammy-XD/VcVideoPlayer",
-    "success_url": "https://t.me/DeeCodeBots",
+    "website": "https://t.me/agastyaopxd",
+    "repository": "https://github.com/RarePeoplee/VcVideoPlayer",
+    "success_url": "https://t.me/ProHere",
     "env": {
         "API_ID": {
             "description": "Your APP_ID from my.telegram.org",
